--- a/view/package.json
+++ b/view/package.json
@@ -23,10 +23,20 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "bootstrap": "^5.3.3",
+    "datatables.net": "^2.1.4",
+    "datatables.net-dt": "^2.1.4",
+    "filepond": "^4.31.2",
+    "filepond-plugin-image-crop": "^2.0.6",
+    "filepond-plugin-image-edit": "^1.6.3",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "filepond-plugin-image-resize": "^2.0.10",
+    "filepond-plugin-image-transform": "^3.8.7",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-filepond": "^7.1.2",
     "react-router-dom": "^6.26.1",
     "web-vitals": "^4.2.3"
   },
