--- a/view/package.json
+++ b/view/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-filepond": "^7.1.2",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.0",
     "web-vitals": "^4.2.3"
   },
   "devDependencies": {
