--- a/view/package.json
+++ b/view/package.json
@@ -25,7 +25,10 @@
     "@testing-library/user-event": "^14.5.2",
     "bootstrap": "^5.3.3",
     "datatables.net": "^2.1.4",
-    "datatables.net-dt": "^2.1.4",
+    "datatables.net-dt": "^2.1.5",
+    "datatables.net-react": "^1.0.0",
+    "datatables.net-responsive": "^3.0.3",
+    "datatables.net-responsive-dt": "^3.0.3",
     "filepond": "^4.31.2",
     "filepond-plugin-image-crop": "^2.0.6",
     "filepond-plugin-image-edit": "^1.6.3",
@@ -38,6 +41,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-filepond": "^7.1.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
     "web-vitals": "^4.2.3"
