--- a/view/package.json
+++ b/view/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
+    "sweetalert2": "^11.13.3",
     "web-vitals": "^4.2.3"
   },
   "devDependencies": {
