--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.0",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
