--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
