--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.2.0",
+    "google-auth-library": "^9.14.1",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
