--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "dev": "nodemon server"
+    "dev": "nodemon server",
+    "vercel-build": "echo 'vercel-build'"
   },
   "keywords": [],
   "author": "",
