--- a/view/.env
+++ b/view/.env
@@ -1,2 +1,2 @@
 VITE_PROXY_TARGET=https://web-dev-kel-4-pluto-cinema-server.vercel.app
-VITE_ORIGIN=http://localhost:4173
+# VITE_ORIGIN=http://localhost:4173
