[feat] update cookie to match vercel need (hopefully)

--- a/view/.env
+++ b/view/.env
@@ -1,1 +1,3 @@
-VITE_PROXY_TARGET=https://web-dev-kel-4-pluto-cinema-server.vercel.app
+# VITE_PROXY_TARGET=https://web-dev-kel-4-pluto-cinema-server.vercel.app
+VITE_PROXY_TARGET=http://localhost:5000
+
