--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,13 @@
     "deasync": "^0.1.30",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-session": "^1.18.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "google-auth-library": "^9.14.1",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "memorystore": "^1.6.7",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.11.0",
