--- a/view/package.json
+++ b/view/package.json
@@ -33,6 +33,7 @@
     "datatables.net-responsive-dt": "^3.0.3",
     "dotenv": "^16.4.5",
     "filepond": "^4.31.2",
+    "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-crop": "^2.0.6",
     "filepond-plugin-image-edit": "^1.6.3",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
