--- a/view/package.json
+++ b/view/package.json
@@ -8,7 +8,14 @@
     "build": "vite build && node build.mjs",
     "lint": "eslint .",
     "preview": "vite preview",
-    "vercel-build": "echo 'vercel-build'"
+    "vercel-build": "echo 'vercel-build'",
+    "test": "jest"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -21,8 +28,6 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.16.7",
     "@rollup/plugin-inject": "^5.0.5",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -40,6 +45,7 @@
     "filepond-plugin-image-preview": "^4.6.12",
     "filepond-plugin-image-resize": "^2.0.10",
     "filepond-plugin-image-transform": "^3.8.7",
+    "jest-environment-jsdom": "^29.7.0",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
@@ -53,16 +59,28 @@
     "web-vitals": "^4.2.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@eslint/js": "^9.9.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.14",
     "@types/jquery": "^3.5.30",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "text-encoding": "^0.7.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "vite": "^5.4.1",
+    "whatwg-fetch": "^3.6.20"
   }
 }
