--- a/view/package.json
+++ b/view/package.json
@@ -45,6 +45,7 @@
     "filepond-plugin-image-preview": "^4.6.12",
     "filepond-plugin-image-resize": "^2.0.10",
     "filepond-plugin-image-transform": "^3.8.7",
+    "history": "^5.3.0",
     "jest-environment-jsdom": "^29.7.0",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
