--- a/Dockerfile-railway
+++ b/Dockerfile-railway
@@ -37,7 +37,10 @@ ENV MYSQL_ROOT_HOST=%
 
 EXPOSE 3306 5000 4173
 
-CMD ["sh", "-c", "service mysql start && \
+RUN apt-get update && apt-get install -y \
+    libmysqlclient-dev && \
+    pip install mysql-connector-python
+
+CMD ["sh", "-c", "python /app/seeder/database/seeder.py > /dev/null 2>&1 && \
     node /app/server/index.js & \
-    python /app/seeder/database/seeder.py && \
     npm run preview --prefix /app/client -- --host"]
