--- a/Dockerfile-railway
+++ b/Dockerfile-railway
@@ -12,6 +12,7 @@ WORKDIR /app
 COPY server/package*.json ./
 RUN npm install
 COPY server/ .
+COPY .env /app/server/.env  # Menyalin file .env ke dalam folder server
 
 FROM python:3.9-slim as python-seeder
 
@@ -31,6 +32,14 @@ COPY --from=python-seeder /app /app/seeder
 ENV MYSQL_ROOT_PASSWORD=root
 ENV MYSQL_DATABASE=plutocinema
 ENV MYSQL_ROOT_HOST=%
+
+ENV DB_HOST=db
+ENV DB_USER=root
+ENV DB_PASS=root
+ENV DB_NAME=plutocinema
+ENV SERVER_PORT=5000
+ENV SERVER_URL=http://localhost:5000
+ENV CLIENT_URL=http://localhost:4173
 
 EXPOSE 3306 5000 4173
 
