[update] update railway dockerfile

--- a/Dockerfile-railway
+++ b/Dockerfile-railway
@@ -42,6 +42,6 @@ ENV CLIENT_URL=http://localhost:4173
 
 EXPOSE 3306 5000 4173
 
-CMD ["sh", "-c", "python /app/seeder/database/seeder.py > /dev/null 2>&1 && \
-    node /app/server/index.js & \
-    npm run preview --prefix /app/client -- --host"]
+CMD ["sh", "-c", "python /app/seeder/database/seeder.py > /dev/null 2>&1 & \
+    npm start --prefix /app/server & \
+    npm run preview --prefix /app/client -- --host && wait"]
